--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,20 @@
     <string name="lblPais">País</string>
     <string name="lblCbPais">Selecciona tu país</string>
     <string name="lblbtnGuardar">Guardar</string>
+    <string name="lblAddPers">Agregar Persona</string>
 
     <!-- messages -->
     <string name="msgSuccess_Pers">Se guardaron los datos satisfactoriamente</string>
     <string name="msgFailure">Hubo inconvenientes al guardar los datos. Inténtelo nuevamente</string>
+    <string name="msgNoRecords">No se encontraron registros</string>
+
+    <!-- dialogs / alerts -->
+    <string name="msgAreYouSureDel">¿Estás seguro de eliminar el elemento seleccionado?</string>
+    <string name="ansYes">Sí</string>
+    <string name="ansNo">No</string>
+
+    <!-- menus -->
+    <string name="tlt_settings">Settings</string>
+    <string name="tlt_search">Búsqueda</string>
 
 </resources>
