--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="msgSuccess_Pers">Se guardaron los datos satisfactoriamente</string>
     <string name="msgFailure">Hubo inconvenientes al guardar los datos. Inténtelo nuevamente</string>
     <string name="msgNoRecords">No se encontraron registros</string>
+    <string name="requiredField">Este campo es obligatorio</string>
+    <string name="docIDLen">El documento debe tener %s dígitos</string>
 
     <!-- dialogs / alerts -->
     <string name="msgAreYouSureDel">¿Estás seguro de eliminar el elemento seleccionado?</string>
